llvm-gcc-4.2-2.9/gcc/testsuite/gcc.apple/warn-1.c
/* APPLE LOCAL file 6218859 */
/* { dg-options "-O2 -Werror=uninitialized" } */

int main(int argc, char *argv[]) {
  int a;

  return a;	/* { dg-error "is used uninitialized in this function" } */
}
